--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,10 +40,10 @@ services:
       context: ./client
     volumes:
       - /app/node_modules
-      - /.client:/app
+      - ./client:/app
   worker:
     environment:
-      - REDIS_HOST=reids
+      - REDIS_HOST=redis
       - REDIS_PORT=6379
     build:
       dockerfile: Dockerfile.dev
