--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 after_success:
   - docker build -t brianr/multi-client ./client
   - docker build -t brianr/multi-nginx ./nginx
-  - docker build -t brianr/multi-server ./service
+  - docker build -t brianr/multi-server ./server
   - docker build -t brianr/multi-worker ./worker
   # Log in to the docker CLI
   echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
