--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t brianr/react-test -f ./client/Dockerfile.dev ./client
   
 script:
-  - docker run -e CI=true brianr/react-test -- --coverage
+  - docker run -e CI=true brianr/react-test npm test
   
 after_success:
   - docker build -t brianr/multi-client ./client
