--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ after_success:
   - docker push hbrong/multi-worker
 
 deploy:
+  edge: true
   provider: elasticbeanstalk
   region: 'us-east-2'
   app: 'multi-docker'
